[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bom-extraction-tool"
version = "0.1.0"
description = "Extract BOM values from blueprint PDFs with citations and fill form PDF."
requires-python = ">=3.10"
dependencies = [
  "pypdf",
  "openpyxl",
  "streamlit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
